--- a/cifar-10-classification.ipynb
+++ b/cifar-10-classification.ipynb
@@ -264,7 +264,7 @@
         "            nn.BatchNorm2d(128),\n",
         "            nn.MaxPool2d(2, 2),\n",
         "            #nn.Dropout(0.2),\n",
-        "            #nn.Dropout(0.4),\n",
+        "            nn.Dropout(0.4),\n",
         "            Block(128, 256, num_input=128,k=k),\n",
         "            nn.BatchNorm2d(256),\n",
         "            nn.ReLU(),\n",
